[gd_scene load_steps=6 format=3 uid="uid://coamxys3ganlv"]

[ext_resource type="Theme" uid="uid://bsuqu64445rmf" path="res://addons/net.yarvis.pixel_pen/resources/default_theme.tres" id="1_7thd0"]
[ext_resource type="Script" path="res://addons/net.yarvis.pixel_pen/editor/new_project_dialog/new_project_dialog.gd" id="1_bewiu"]
[ext_resource type="Shader" path="res://addons/net.yarvis.pixel_pen/resources/editor_canvas.gdshader" id="1_y3rtv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_enn2t"]
bg_color = Color(1, 1, 1, 0.027451)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_auk7k"]
shader = ExtResource("1_y3rtv")
shader_parameter/origin = null
shader_parameter/tint = Vector4(0, 0, 0, 0)
shader_parameter/tile_size = Vector2(0, 0)
shader_parameter/lock_to_global = 0.0

[node name="NewProjectDialog" type="ConfirmationDialog" node_paths=PackedStringArray("name_node", "width_node", "height_node", "preview_aspect_ratio", "canvas")]
snap_2d_transforms_to_pixel = true
canvas_item_default_texture_filter = 0
title = "New"
initial_position = 4
size = Vector2i(512, 320)
visible = true
theme = ExtResource("1_7thd0")
dialog_hide_on_ok = false
dialog_close_on_escape = false
script = ExtResource("1_bewiu")
name_node = NodePath("Control/Margin/VBoxContainer/HBoxContainer/LineEditName")
width_node = NodePath("Control/Margin/VBoxContainer/Panel/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer2/LineEditW")
height_node = NodePath("Control/Margin/VBoxContainer/Panel/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer3/LineEditH")
preview_aspect_ratio = NodePath("Control/Margin/VBoxContainer/Panel/MarginContainer/HBoxContainer/AspectRatioCanvas")
canvas = NodePath("Control/Margin/VBoxContainer/Panel/MarginContainer/HBoxContainer/AspectRatioCanvas/Canvas")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.6
offset_top = 3.6
offset_right = -3.60001
offset_bottom = -37.6
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Margin" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Margin"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="HBoxContainer" type="HBoxContainer" parent="Control/Margin/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="Name" type="Label" parent="Control/Margin/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Name"

[node name="LineEditName" type="LineEdit" parent="Control/Margin/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0
placeholder_text = "Untitled"
clear_button_enabled = true
caret_blink = true

[node name="Panel" type="Panel" parent="Control/Margin/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_enn2t")

[node name="MarginContainer" type="MarginContainer" parent="Control/Margin/VBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="HBoxContainer" type="HBoxContainer" parent="Control/Margin/VBoxContainer/Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Margin/VBoxContainer/Panel/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="Control/Margin/VBoxContainer/Panel/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Width" type="Label" parent="Control/Margin/VBoxContainer/Panel/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "width"

[node name="LineEditW" type="LineEdit" parent="Control/Margin/VBoxContainer/Panel/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0
text = "32"
alignment = 2
virtual_keyboard_type = 2

[node name="Pixel" type="Label" parent="Control/Margin/VBoxContainer/Panel/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "px"

[node name="HBoxContainer3" type="HBoxContainer" parent="Control/Margin/VBoxContainer/Panel/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Height" type="Label" parent="Control/Margin/VBoxContainer/Panel/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "height"

[node name="LineEditH" type="LineEdit" parent="Control/Margin/VBoxContainer/Panel/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0
text = "32"
alignment = 2
virtual_keyboard_type = 2

[node name="Pixel2" type="Label" parent="Control/Margin/VBoxContainer/Panel/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "px"

[node name="AspectRatioCanvas" type="AspectRatioContainer" parent="Control/Margin/VBoxContainer/Panel/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment_vertical = 0

[node name="Canvas" type="ColorRect" parent="Control/Margin/VBoxContainer/Panel/MarginContainer/HBoxContainer/AspectRatioCanvas"]
material = SubResource("ShaderMaterial_auk7k")
layout_mode = 2

[connection signal="confirmed" from="." to="." method="_on_confirmed"]
[connection signal="size_changed" from="." to="." method="_on_size_changed"]
[connection signal="text_changed" from="Control/Margin/VBoxContainer/HBoxContainer/LineEditName" to="." method="_on_line_edit_name_text_changed"]
[connection signal="text_changed" from="Control/Margin/VBoxContainer/Panel/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer2/LineEditW" to="." method="_on_line_edit_w_text_changed"]
[connection signal="text_changed" from="Control/Margin/VBoxContainer/Panel/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer3/LineEditH" to="." method="_on_line_edit_h_text_changed"]
